[gd_scene load_steps=2 format=3 uid="uid://wlyrd36b3jde"]

[ext_resource type="Script" uid="uid://eglnpic1xx75" path="res://example/UDPExample.gd" id="1_41rwg"]

[node name="UDPMiniDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_41rwg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.666667, 1, 1, 1)

[node name="salir" type="Button" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 31.0
text = "exit"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "UDP功能示例 | UDP Feature Demo"
horizontal_alignment = 1

[node name="Input" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "输入要发送的消息 | Enter message to send"

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IPLabel" type="Label" parent="VBox/HBox"]
layout_mode = 2
text = "目标IP | Target IP:"

[node name="IP" type="LineEdit" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入目标IP地址 | Enter target IP address"

[node name="PortLabel" type="Label" parent="VBox/HBox"]
layout_mode = 2
text = "端口 | Port:"

[node name="Port" type="LineEdit" parent="VBox/HBox"]
layout_mode = 2
text = "9000"
placeholder_text = "端口 | Port"

[node name="Send" type="Button" parent="VBox/HBox"]
layout_mode = 2
text = "发送 | Send"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BroadcastPortLabel" type="Label" parent="VBox/HBox2"]
layout_mode = 2
text = "广播端口 | Broadcast Port:"

[node name="BroadcastPort" type="LineEdit" parent="VBox/HBox2"]
layout_mode = 2
text = "9000"
placeholder_text = "广播端口 | Broadcast Port"

[node name="Broadcast" type="Button" parent="VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "广播消息 | Broadcast Message"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "消息记录 | Message Log:"

[node name="Output" type="TextEdit" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "这里将显示收到的消息... | Messages will be displayed here..."
wrap_mode = 1
scroll_smooth = true

[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
